src/assets/styles/pages/solution/_solution_categories.scss
@use "./../../init" as *;

.c-solution-categories {
    padding: 6rem 0;

    &__title {
        margin-bottom: 3.2rem;
        font-family: "Wix Madefor Display", sans-serif;
        font-size: 4rem;
        font-weight: 800;
        line-height: 1.2;
        color: #070216;
    }

    &__grid {
        display: grid;
        grid-template-columns: 338px 240px 338px 1fr;
        gap: 2rem;

        @media (width < $bp-desktop) {
            grid-template-columns: repeat(2, 1fr);
        }

        @media (width < $bp-tablet) {
            grid-template-columns: 1fr;
        }
    }
}

.c-solution-category-card {
    position: relative;
    display: flex;
    align-items: flex-end;
    min-height: 40.4rem;
    overflow: hidden;
    border-radius: 0.8rem;

    @media (width >= $bp-desktop) {
        &:nth-child(2) {
            grid-column: 2 / span 2;
        }

        &:nth-child(3) {
            grid-row: 2;
            grid-column: 1 / span 2;
        }

        &:nth-child(4) {
            grid-row: 2;
            grid-column: 3;
        }

        &:nth-child(5) {
            grid-row: 1 / span 2;
            grid-column: 4;
        }

        &:nth-child(2),
        &:nth-child(3) {
            .c-solution-category-card__subcategories {
                display: grid;
                grid-template-rows: repeat(3, auto);
                grid-auto-columns: 1fr;
                grid-auto-flow: column;
                column-gap: 4rem;
            }
        }
    }

    &__image {
        position: absolute;
        inset: 0;
        width: 100%;
        height: 100%;
        object-fit: cover;
    }

    &__content {
        position: relative;
        z-index: 1;
        display: flex;
        flex-direction: column;
        gap: 1.6rem;
        justify-content: flex-end;
        height: 40.4rem;
        padding: 3.2rem;
        color: #fff;
    }

    &__name {
        display: flex;
        gap: 0.8rem;
        align-items: center;
        font-family: "Wix Madefor Display", sans-serif;
        font-size: 2.4rem;
        font-weight: 800;
        line-height: 1.2;
    }

    &__link {
        color: inherit;
        text-decoration: none;

        &::after {
            position: absolute;
            inset: 0;
            content: "";
        }
    }

    &__count {
        display: inline-flex;
        align-items: center;
        justify-content: center;
        min-width: 1.8rem;
        height: 1.8rem;
        padding: 0 0.4rem;
        font-family: "DM Sans", sans-serif;
        font-size: 1.1rem;
        font-weight: 700;
        color: #fff;
        background: #dd1969;
        border-radius: 10rem;
    }

    &__subcategories {
        display: flex;
        flex-direction: column;
        align-self: flex-start;
        padding: 0;
        list-style: none;
    }

    &__subcategory {
        display: flex;
        gap: 1.2rem;
        align-items: center;

        &::before {
            flex-shrink: 0;
            width: 1.2rem;
            height: 0.2rem;
            content: "";
            background: #dd1969;
        }

        a {
            position: relative;
            z-index: 2;
            font-family: "DM Sans", sans-serif;
            font-size: 1.6rem;
            font-weight: 500;
            line-height: 1.8;
            color: rgb(255 255 255 / 85%);
            text-decoration: none;

            &:hover {
                color: #fff;
                text-decoration: underline;
            }
        }
    }

    &__cta {
        position: relative;
        z-index: 2;
        display: inline-flex;
        gap: 0.4rem;
        align-items: center;
        align-self: flex-start;
        font-family: "DM Sans", sans-serif;
        font-size: 1.5rem;
        font-weight: 700;
        line-height: 1.2;
        color: #fff;
        text-decoration: underline;
        text-underline-offset: 3px;

        img {
            width: 1.8rem;
            height: 1.8rem;
        }

        &:hover {
            opacity: 0.8;
        }
    }
}

